
API Changes
***********

Testing
*******

Internals
*********


bzr 1.14rc2
###########
:Codename: brisbane-core
:1.14rc1: 2009-04-06
:1.14rc2: 2009-04-19

New formats 1.14 and 1.14-rich-root supporting End-Of-Line (EOL) conversions,
keyword templating (via the bzr-keywords plugin) and generic content filtering.
End-of-line conversion is now supported for formats supporting content
filtering.

Changes from RC1 to RC2
***********************

* Fix for bug 358037 Revision not in
  bzrlib.groupcompress.GroupCompressVersionedFiles (Brian de Alwis, 
  John A Meinel)

* Fix for bug 354036 ErrorFromSmartServer - AbsentContentFactory object has no
  attribute 'get_bytes_as' exception while pulling from Launchpad 
  (Jean-Francois Roy, Andrew Bennetts, Robert Collins)

* Fix for bug 355280 eol content filters are never loaded and thus never
  applied (Brian de Alwis, Ian Clatworthy)
 
* bzr.dev -r4280  Change _fetch_uses_deltas = False for CHK repos until we can
  write a better fix. (John Arbash Meinel, Robert Collins)

* Fix for bug 361574 uncommit recommends undefined --levels and -n options
  (Marius Kruger, Ian Clatworthy)

* bzr.dev r4289 as cherrypicked at lp:~spiv/bzr/stacking-cherrypick-1.14 
  (Andrew Bennetts, Robert Collins)

Compatibility Breaks
********************

* A previously disabled code path to accelerate getting configuration
  settings from a smart server has been reinstated. We think this *may*
  cause a incompatibility with servers older than bzr 0.15. We intend
  to issue a point release to address this if it turns out to be a
  problem. (Robert Collins, Andrew Bennetts)

* bzr no longer autodetects nested trees as 'tree-references'.  They
  must now be explicitly added tree references.  At the commandline, use
  join --reference instead of add.  (Aaron Bentley)

* The ``--long`` log format (the default) no longer shows merged
  revisions implicitly, making it consistent with the ``short`` and